# SAMAudio

./: .gitignore  README.md  pyproject.toml
src/samaudio/: __init__.py  audio.py  cli.py  config.py  diarization.py  enrollment.py  matcher.py  models.py  pipeline.py  speaker_embedding.py  storage.py  transcription.py  webapp.py
src/samaudio/static/: app.css  app.js
src/samaudio/templates/: index.html
tests/: test_matcher.py
